tests/miz/fail/parser/fail_parser_justifications_recovery_001.miz
thesis by;
thesis by , A;
thesis by A,;
thesis by A[T], B;
thesis by mml.foo.{G1,};
thesis by mml.foo.{,G1};
thesis by mml.foo.{G1,,G2};
thesis by mml.foo.{G1;
thesis by computation(, steps: 1);
thesis by computation(steps: 1, , timeout: 2);
thesis by computation(steps:);
let x be set by computation(steps: 1);
